# Multimodal-Analysis-Agent

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
backend/: __init__.py  main.py
backend/agents/: __init__.py  analyzer.py  feedback_loop.py  orchestrator.py  planner.py  visualizer.py
backend/api/: routes.py
backend/core/: __init__.py  config.py  exceptions.py  logging.py
backend/processors/: __init__.py  audio_processor.py  image_processor.py  text_processor.py  video_processor.py
config/: settings.yaml
docs/: ARCHITECTURE.md
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
scripts/: setup.sh
